etl-api/tests/snapshots/pipelines__all_pipelines_can_be_read-2.snap
---
source: etl-api/tests/pipelines.rs
expression: pipeline.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                2000,
            ),
            max_fill_ms: Some(
                10,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        10,
    ),
    max_table_sync_workers: Some(
        4,
    ),
    log_level: Some(
        Info,
    ),
}
