etl-api/tests/snapshots/pipelines__all_pipelines_can_be_read.snap
---
source: etl-api/tests/pipelines.rs
expression: pipeline.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        ApiBatchConfig {
            max_fill_ms: 5,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    max_table_sync_workers: Some(
        2,
    ),
}
