etl-api/tests/snapshots/pipelines__an_existing_pipeline_can_be_read.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                1000,
            ),
            max_fill_ms: Some(
                5,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    table_error_retry_max_attempts: Some(
        5,
    ),
    max_table_sync_workers: Some(
        2,
    ),
    log_level: Some(
        Info,
    ),
    schema_creation_mode: Some(
        CreateIfMissing,
    ),
}
