etl-api/tests/snapshots/pipelines__an_existing_pipeline_can_be_updated.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    replication_slot: ApiReplicationSlotConfig {
        temporary: false,
    },
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                2000,
            ),
            max_fill_ms: Some(
                10,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        10,
    ),
    max_table_sync_workers: Some(
        4,
    ),
    log_level: Some(
        Info,
    ),
}
