etl-api/tests/snapshots/pipelines__pipeline_config_can_be_updated-4.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                10000,
            ),
            max_fill_ms: Some(
                100,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        12,
    ),
    max_table_sync_workers: Some(
        8,
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    log_level: None,
}
