etl-api/tests/snapshots/pipelines__pipeline_config_can_be_updated.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    replication_slot: ApiReplicationSlotConfig {
        temporary: false,
    },
    batch: Some(
        ApiBatchConfig {
            max_size: Some(
                10000,
            ),
            max_fill_ms: Some(
                100,
            ),
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    table_error_retry_max_attempts: Some(
        5,
    ),
    max_table_sync_workers: Some(
        2,
    ),
    log_level: None,
}
